# weft

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  VERSION  go.mod  go.sum  pyproject.toml  spec.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-support.yml  issue.yml  proposal.yml
.github/workflows/: ci.yml  publish-homebrew.yml
cmd/codux/: main.go
cmd/codux-release/: main.go
cmd/weft/: main.go
cmd/weft-release/: main.go
codux/: AGENTS.md  __init__.py  cli.py  codex_proxy.py  config.py  host.py  launcher.py  nav_pane.py  navigation.py  render.py  runtime_lock.py  sessions.py  state.py  theme.py  title_sync.py  titles.py  tmux.py  tmux_api.py  tmux_snapshot.py
docs/: configuration.md  repository-settings.md  technical.md  usage.md
hooks/: auto-title-openai.sh  auto_title_openai_test.go
internal/app/: app.go  app_test.go  doctor_attention.go  doctor_keys.go  doctor_memory.go
internal/codexsession/: codexsession.go  codexsession_test.go
internal/codexskill/: install.go
internal/config/: config.go  config_test.go
internal/filex/: filex.go
internal/ipc/: ipc.go  ipc_test.go
internal/pathx/: path.go
scripts/: check-pr-commit-subjects.sh  cleanup-worktrees.sh  create-worktree.sh  next_version.py  render_homebrew_formula.py
tests/: AGENTS.md  conftest.py  test_cli.py  test_codex_proxy.py  test_config.py  test_host.py  test_nav_pane.py  test_navigation.py  test_release_scripts.py  test_render.py  test_sessions.py  test_state.py  test_tmux.py  test_tmux_snapshot.py
(+77 files in other folders)
