[project]
name = "codux"
version = "1.0.0"
description = "A tmux-native tab manager for Codex sessions."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Edward Murphy" },
]
dependencies = [
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
codux = "codux.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codux"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live tmux runtime tests; set CODUX_RUN_INTEGRATION=1 to run",
]
